Use HTTPS for image

--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ permalink: /about/
 
 <div class="row">
     <img
-        src="http://www.gravatar.com/avatar/5c4b1939bded62f14f7f8b249b9fffda.png?s=350"
+        src="https://www.gravatar.com/avatar/5c4b1939bded62f14f7f8b249b9fffda.png?s=350"
         alt="Diarmuid"
         class="one-half column"
     />
